[package]
name = "a19_actor"
version = "0.1.0"
authors = ["Matt Hoyt <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a19_core = { path = "../a19_core" }
a19_concurrent = { path = "../a19_concurrent"}
futures = "0.3"
async-trait = "0.1.*"