[package]
name = "a19_concurrent"
version = "0.1.0"
authors = ["Matt Hoyt <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
a19_core = { path = "../a19_core" }
time-test = "0.2.2"
byteorder = "1.3"
memmap = "0.7"
futures = "0.3"
tokio = { version = "0.2.*", features = ["rt-core"]}
async-trait = "0.1.*"

[dev-dependencies]
loom = "0.2.12"
