[package]
name = "a19_data_persist"
version = "0.1.0"
authors = ["Matt Hoyt <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
flatbuffers = "0.6"
a19_core = { path = "../a19_core" }
a19_concurrent = { path = "../a19_concurrent" }
futures = "0.3"
tokio = { version = "0.2", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3"

[dependencies.zmq]
version = "0.9"
features = ["vendored"]

[build-dependencies]
flatc-rust = "*"

[dev-dependencies]
serial_test = "*"
