[package]
name = "a19_editor"
version = "0.1.0"
authors = ["Matt Hoyt <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a19_core = { path = "../a19_core" }
a19_data_structure = { path = "../a19_data_structure" }