[package]
name = "a19_messaging"
version = "0.1.0"
authors = ["mrh0057 <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a19_core = { path = "../a19_core" }
serde = { version = "1.0", features = ["derive"] }
flatbuffers = "0.6"

[build-dependencies]
flatc-rust = "*"