[package]
name = "a19_messaging_server"
version = "0.1.0"
authors = ["mrh0057 <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
a19_core = { path = "../a19_core" }
a19_messaging = { path = "../a19_messaging" }
a19_concurrent = { path = "../a19_concurrent" }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
