[package]
name = "a19_security"
version = "0.1.0"
authors = ["Matt Hoyt <mrhoyt4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.*"
hmac = "0.7.*"
chrono = "0.4.*"
byteorder = "1.3"
a19_concurrent = { path = "../a19_concurrent" }
sha2 = "0.8.1"
anyhow = "1.0"
thiserror = "1.0"
crypto-mac = "0.7"
generic-array = "0.12"